1st complet draft

--- a/fixed.bib
+++ b/fixed.bib
@@ -41,3 +41,28 @@
   pages={47--62},
   year={2007}
 }
+
+@article{blanco2006microsolvation,
+	title={Microsolvation of formamide: A rotational study},
+	author={Blanco, Susana and L{\'o}pez, Juan C and Lesarri, Alberto and Alonso, Jos{\'e} L},
+	journal={Journal of the American Chemical Society},
+	volume={128},
+	number={37},
+	pages={12111--12121},
+	year={2006},
+	publisher={ACS Publications}
+}
+
+@article{corner,
+	doi = {10.21105/joss.00024},
+	url = {https://doi.org/10.21105/joss.00024},
+	year  = {2016},
+	month = {jun},
+	publisher = {The Open Journal},
+	volume = {1},
+	number = {2},
+	pages = {24},
+	author = {Daniel Foreman-Mackey},
+	title = {corner.py: Scatterplot matrices in Python},
+	journal = {The Journal of Open Source Software}
+}
