--- a/line_id.tex
+++ b/line_id.tex
@@ -247,7 +247,7 @@
     \hline
     243521.04 (0.01) & [12, 1, 12]\rt[11, 1, 11]                    & $-$2.98 & 79.19  & 25 & CDMS \\
     \hline
-    \multicolumn{6}{c}{Formic acid (\tcooh)} \\
+    \multicolumn{6}{c}{Formic acid (\thcooh)} \\
     \hline
     262103.48 (0.01) & [12, 0, 12]\rt[11, 0, 11]                    & $-$3.69 & 82.77  & 25 & CDMS \\
     \enddata
