--- a/mf_temp.tex
+++ b/mf_temp.tex
@@ -1,29 +1,20 @@
-\begin{deluxetable*}{ccccccc}
+\begin{deluxetable}{cccc}
     \tabletypesize{\scriptsize}
     \tablecaption{MCMC Fitting of Methyl Formate \label{tbl:mf_temp}}
     \tablewidth{\textwidth}
-    \tablehead{\colhead{Source} & \multicolumn{2}{c}{Temperature [K]} & 
-               \multicolumn{2}{c}{log($\mathcal{N}$) [cm$^{-2}$]} & \multicolumn{2}{c}{Line width [km s$^{-1}$]} \\
-               \colhead{} & \colhead{best} & \colhead{mode$\pm$HPD} &
-               \colhead{best} & \colhead{mode$\pm$HPD} &
-               \colhead{best} & \colhead{mode$\pm$HPD}}
-    
+    \tablehead{\colhead{Source} & \colhead{Temperature} & 
+               \colhead{log($\mathcal{N}$)} & \colhead{Line width} \\
+               \colhead{} & \colhead{[K]} & \colhead{[cm$^{-2}$]} & \colhead{[km s$^{-1}$]}}
     \startdata
-    Set1\_ID01\_2 & 95 & 76$^{+315}_{-56}$ & 15.24 & 15.29$^{+0.42}_{-0.42}$ & 4.86 & 4.77$^{+0.22}_{-0.52}$ \\
-    Set1\_ID01 & 980 & 995$^{+5}_{-89}$ & 15.76 & 15.28$^{+0.57}_{-0.57}$ & 3.51 & 3.51$^{+1.45}_{-1.07}$ \\
-    Set1\_ID02 & 87 & 98$^{+14}_{-41}$ & 15.67 & 15.67$^{+0.10}_{-0.08}$ & 3.66 & 4.06$^{+0.65}_{-0.79}$ \\
-    Set1\_ID06 & 93 & 93$^{+59}_{-35}$ & 15.67 & 15.67$^{+0.12}_{-0.08}$ & 4.84 & 4.77$^{+0.22}_{-0.02}$ \\
-    Set2\_ID00 & 263 & 310$^{+3}_{-56}$ & 16.89 & 16.92$^{+0.05}_{-0.04}$ & 3.95 & 3.95$^{+0.15}_{-0.12}$ \\
-    Set2\_ID01\_2 & 217 & 194$^{+75}_{-4}$ & 16.37 & 16.36$^{+0.10}_{-0.03}$ & 2.22 & 2.25$^{+0.14}_{-0.12}$ \\
-    Set2\_ID02 & 195 & 225$^{+119}_{-64}$ & 16.04 & 16.10$^{+0.20}_{-0.09}$ & 1.21 & 1.21$^{+0.00}_{-0.01}$ \\
-    Set2\_ID03 & 931 & 988$^{+11}_{-99}$ & 17.29 & 17.31$^{+0.01}_{-0.05}$ & 4.97 & 4.97$^{+0.03}_{-0.01}$ \\
-    Set2\_ID05 & 830 & 792$^{+207}_{-138}$ & 15.70 & 15.70$^{+0.23}_{-0.73}$ & 1.97 & 1.53$^{+0.98}_{-0.33}$ \\
-    Set2\_ID07 & 152 & 131$^{+281}_{-120}$ & 14.79 & 14.72$^{+0.53}_{-0.43}$ & 3.24 & 1.66$^{+2.26}_{-0.40}$ \\
-    Set2\_ID08 & 159 & 10$^{+551}_{-0}$ & 14.75 & 14.11$^{+0.85}_{-0.04}$ & 2.37 & 1.20$^{+2.15}_{-0.00}$ \\
-    Set2\_ID12 & 115 & 41$^{+269}_{-30}$ & 14.96 & 15.02$^{+0.05}_{-0.94}$ & 4.54 & 4.89$^{+0.09}_{-1.70}$ \\
-    Set3\_ID00 & 98 & 58$^{+41}_{-14}$ & 15.85 & 15.82$^{+0.26}_{-0.09}$ & 1.24 & 1.25$^{+0.02}_{-0.05}$ \\
-    Set3\_ID01 & 134 & 134$^{+13}_{-27}$ & 16.59 & 16.60$^{+0.02}_{-0.02}$ & 3.04 & 3.08$^{+0.18}_{-0.15}$ \\
-    Set3\_ID07\_3 & 772 & 954$^{+45}_{-404}$ & 15.21 & 15.10$^{+0.05}_{-0.99}$ & 1.21 & 1.21$^{+0.06}_{-0.01}$ \\
-    Set3\_ID07 & 104 & 92$^{+182}_{-45}$ & 15.67 & 15.67$^{+0.29}_{-0.15}$ & 2.44 & 2.33$^{+1.22}_{-0.66}$ \\
+Per-emb 33 A & 97.8$^{+126.7}_{-24.6}$ & 15.31$^{+0.20}_{-0.05}$ & 3.7$^{+0.4}_{-0.4}$ \\
+Per-emb 26 & 75.0$^{+48.4}_{-9.3}$ & 15.89$^{+0.03}_{-0.06}$ & 4.8$^{+0.2}_{-0.6}$ \\
+Per-emb 44 & 213.6$^{+13.6}_{-15.7}$ & 17.21$^{+0.02}_{-0.05}$ & 3.8$^{+0.0}_{-0.1}$ \\
+Per-emb 12 B & 199.6$^{+51.4}_{-7.3}$ & 16.93$^{+0.08}_{-0.04}$ & 2.4$^{+0.1}_{-0.0}$ \\
+Per-emb 13 & 217.1$^{+43.2}_{-11.9}$ & 16.56$^{+0.08}_{-0.02}$ & 2.1$^{+0.1}_{-0.0}$ \\
+Per-emb 27 & 251.3$^{+44.0}_{-16.7}$ & 17.00$^{+0.08}_{-0.05}$ & 4.2$^{+0.1}_{-0.2}$ \\
+SVS 13B & 99.5$^{+180.8}_{-25.2}$ & 14.89$^{+0.32}_{-0.06}$ & 2.5$^{+0.5}_{-0.4}$ \\
+B1-b S & 120.6$^{+92.9}_{-13.2}$ & 16.08$^{+0.11}_{-0.02}$ & 2.4$^{+0.1}_{-0.1}$ \\
+Per-emb 29 & 194.1$^{+58.0}_{-13.2}$ & 16.74$^{+0.08}_{-0.02}$ & 3.5$^{+0.0}_{-0.1}$ \\
+Per-emb 11 A & 333.9$^{+56.6}_{-156.0}$ & 16.03$^{+0.09}_{-0.20}$ & 2.4$^{+0.2}_{-0.1}$ \\
     \enddata
-\end{deluxetable*}
+\end{deluxetable}
