--- a/peaches.tex
+++ b/peaches.tex
@@ -156,9 +156,9 @@
 \author{Satoshi Yamamoto}
 \affiliation{Department of Physics, The University of Tokyo, 7-3-1, Hongo, Bunkyo-ku, Tokyo 113-0033, Japan}
 \author{Cecilia Ceccarelli}
-\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d’Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
+\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d'Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
 \author{Bertrand Lefloch}
-\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d’Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
+\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d'Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
 
 \correspondingauthor{Yao-Lun Yang}
 \email{yaolunyang.astro@gmail.com}
@@ -257,7 +257,7 @@ Figure\,\ref{fig:continuum} shows the continuum emission along with the fitted s
 
 The observations resolve or marginally resolve 90\% (45 of 50) of the continuum sources.  Our sample includes single sources as well as resolved and unresolved multiple systems.  According to the VANDAM survey \citep{2016ApJ...818...73T}, our sample contains eleven binary systems and one triple system.  Two of eleven binary systems are resolved and the triple system appears as a single source and an unresolved binary.  In total, 20\%\ of the sources are unresolved binary. 
 
-The averaged continuum brightness temperature (\tbc) traces the dust mass for optically thin emission, while the dust emission from the center of prototstars may be marginally optically thick at ALMA Band 6 \citep{2020ApJ...889..172K}, making the derived dust mass lower limits.  The \tbc\ of PEACHES protostars increases linearly with the central dust mass of Perseus protostars derived with the 1\,mm ALMA and 9\,mm VLA observations \citep{2020arXiv200602812T} except for Per-emb 54, suggesting that \tbc\ probes the central dust mass without significant impact of optical depth (Figure\,\ref{fig:Tb_M}).
+The averaged continuum brightness temperature (\tbc) traces the dust mass for optically thin emission, while the dust emission from the center of protostars may be marginally optically thick at ALMA Band 6 \citep{2020ApJ...889..172K}, making the derived dust mass lower limits.  The \tbc\ of PEACHES protostars increases linearly with the central dust mass of Perseus protostars derived with the 1\,mm ALMA and 9\,mm VLA observations \citep{2020arXiv200602812T} except for Per-emb 54, suggesting that \tbc\ probes the central dust mass without significant impact of optical depth (Figure\,\ref{fig:Tb_M}).
 
 \begin{figure}[htbp!]
   \centering
@@ -553,7 +553,7 @@ This work presents the PEACHES survey, an unbiased chemistry survey of COMs towa
 \begin{enumerate}
   \item Perseus Class 0/I protostars commonly (58\%) show warm COMs emission.  \methanol\ is the most detected species of COMs, while our observations show the emission of 12 O-bearing COMs and 4 N-bearing COMs, including isotopologues.
   \item The good correlations between the most detect COMs, \methanol, \methylcyanide, \methylformate, and \dimethylether, as well as between these COMs and other fewer detected COMs hint a universal chemistry of COMs for the Perseus embedded protostars.  Protostellar properties, such as \lbol, the evolutionary indicator, such as \tbol, and the minimum distance to the cloud edge, have little impact to the number of detected COMs and the abundance of COMs.
-  \item \methylformate\ and \dimethylether\ are the most abundant COMs other than \methanol\ with abundance ratios to \methanol\ of 0.22$^{+0.17}_{-0.10}$ and 0.21$^{+0.15}_{-0.09}$, respectively.  The abundance of COMs to \methanol\ in the Perseus protostars are significantly higher than that of the well-known hot corinos, such as IRAS 16293$-$2422 B\textcolor{red}{, and inconsistent with the model predictions by \citet{2013ApJ...765...60G}.}
+  \item \methylformate\ and \dimethylether\ are the most abundant COMs other than \methanol\ with abundance ratios to \methanol\ of 0.22$^{+0.17}_{-0.10}$ and 0.21$^{+0.15}_{-0.09}$, respectively.  The abundance of COMs to \methanol\ in the Perseus protostars are significantly higher than that of the well-known hot corinos, such as IRAS 16293$-$2422 B, although our model may underestimate of the \methanol\ column density due to its high optical depth.  The abundance ratios of N-bearing COMs agree with the model predictions by\citet{2013ApJ...765...60G}, which underestimates the abundance of the O-bearing COMs.
   \item A similar composition of \methanol\ and \methylcyanide\ on the icy grains for the Perseus protostars may result in the observed extremely well correlated column densities of \methanol\ and \methylcyanide.  
   \item The elevated abundance ratio of \methylcyanide\ to \methanol\ at the prestellar phase indicates a more efficient gas-phase chemistry to produce \methylcyanide\ at the cold phase or an insignificant role of the warm-phase grain-surface chemistry for the abundance of \methylcyanide\ at the protostellar phase.
   \item The ratios of more complex COMs, such as \methylformate\ and \dimethylether, to the less complex COMs, such as \methanol\ and \methylcyanide, increase as the averaged continuum brightness temperature, a proxy of the gas column density, suggesting an enhanced production of more complex COMs toward more embedded sources.
@@ -644,7 +644,7 @@ where $R_{\rm g2d}$ is the gas-to-dust mass ratio of 100, $<I_{\nu}>$ is the ave
 \begin{figure*}[htbp!]
   \centering
   \includegraphics[width=\textwidth]{Ngas_ngas.pdf}
-  \caption{The derived gas column and volumn densities for the PEACHES protostars sorted by their gas column density.}
+  \caption{The derived gas column and volume densities for the PEACHES protostars sorted by their gas column density.}
   \label{fig:Ngas_ngas}
 \end{figure*}
 
