--- a/peaches.tex
+++ b/peaches.tex
@@ -146,7 +146,7 @@
 \author{Takeshi Sakai}
 \affiliation{Department of Communication Engineering and Informatics, Graduate School of Informatics and Engineering, \\The University of Electro-Communications, Chofugaoka, Chofu, Tokyo 182-8585, Japan}
 \author{Ana L\'{o}pez-Sepulcre}
-\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d’Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
+\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d'Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
 \author{Yoko Oya}
 \affiliation{Department of Physics, The University of Tokyo, 7-3-1, Hongo, Bunkyo-ku, Tokyo 113-0033, Japan}
 \author{Yoshimasa Watanabe}
@@ -155,6 +155,8 @@
 \affiliation{National Astronomical Observatory of Japan, Osawa, Mitaka, Tokyo 181-8588, Japan}
 \author{Satoshi Yamamoto}
 \affiliation{Department of Physics, The University of Tokyo, 7-3-1, Hongo, Bunkyo-ku, Tokyo 113-0033, Japan}
+\author{Mathilde Bouvier}
+\affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d'Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
 \author{Cecilia Ceccarelli}
 \affiliation{Univ. Grenoble Alpes, CNRS, Institut de Plan\'{e}tologie et d'Astrophysique de Grenoble (IPAG), F-38000 Grenoble, France}
 \author{Bertrand Lefloch}
